--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,33 +1,17 @@
+name: build&release
 
-# This workflow will build an Arch Linux ISO file with the commit on it
-name: build parchiso per release
 on:
-  release:
-    types:
-      - created
-  workflow_dispatch:
+  push:
+    tags:
+      - "*"
 
-env:
-  api_key: ${{ secrets.GITHUB_TOKEN }}
-  name: ${{ github.event.repository.name }}
-  release_name: ${{ github.event.release.name }}
+permissions:
+  contents: read
+
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
-    container:
-      image: archlinux:latest
-      options: --privileged
     steps:
       - uses: actions/checkout@v3
-      - name: print variable
-        run: |
-          echo $name
-          echo $release_name
-      - name: Install Packages via Pacman
-        run: pacman -Sy; pacman --noconfirm -S git archiso python python-pip
-      - name: Install Python packages via pip
-        run: pip install -U pip pyGithub
-      - name: Build image
-        run: mkarchiso -v iso/
-      - name: Upload iso to the release
-        run: python tools/upload_assest.py
+      - name: Parch build Action
+        uses: parchlinux/build-action:latest
