--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,6 +7,8 @@ jobs:
   build:
     name: build and release
     runs-on: ubuntu-latest
+    container:
+      options: --privileged
     steps:
       - name: Checkout
         uses: actions/checkout@v3
