--- a/iso/pacman.conf
+++ b/iso/pacman.conf
@@ -95,12 +95,7 @@ Include = /etc/pacman.d/mirrorlist
 
 [ppr]
 SigLevel = Optional TrustedOnly
-Server = https://parchlinux.github.io/ppr/$arch
-
-[pcp]
-SigLevel = Optional TrustedOnly
-Server = https://parchlinux.github.io/pcp/$arch
-
+Server = https://raw.githubusercontent.com/parchlinux/ppr/main/x86_64/
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
 #[custom]
